package com.example.linebot;

import com.linecorp.bot.messaging.model.*;

import java.net.URISyntaxException;
import java.util.ArrayList;

public interface Replier {
    Message reply();
}
